agregué la barra de navegación, resolví unos problemas que daba al juntar ambos css y resolví un issue con z-index

--- a/src/styles/artistaStyle.css
+++ b/src/styles/artistaStyle.css
@@ -82,7 +82,7 @@ line-height: 27px;
 text-align: justify;
 }
 
-#bloque1{
+#bloque1Artista{
     align-items: center;
 }
 
